<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dkey_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dkey_name_value"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dkey_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dkey_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dkey_name" />

    <TextView
        android:id="@+id/dkey_device_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/dkey_device"
        app:layout_constraintTop_toBottomOf="@id/dkey_name" />

    <TextView
        android:id="@+id/dkey_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dkey_device" />

    <TextView
        android:id="@+id/dkey_date_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dkey_date"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/dkey_device" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#A0A0A0"
        app:layout_constraintTop_toBottomOf="@id/dkey_date"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>